--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@
         .star:nth-child(2) { animation-delay: 0.2s; }
         .star:nth-child(3) { animation-delay: 0.3s; }
 
+        /* Level display transition for level-up animation */
+        #speed-level {
+            transition: transform 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
+        }
+
         /* Mobile-specific optimizations */
         @media (max-width: 640px) {
             .game-container {
@@ -1126,11 +1131,17 @@
                 this.timerInterval = null;
                 this.isPlaying = false;
 
-                // Speed control - starts slow and adapts
-                this.baseDecayRate = 0.3;      // Very slow base decay (was 1)
-                this.currentDecayRate = 0.3;   // Current decay rate
-                this.minDecayRate = 0.2;       // Minimum (slowest) decay
-                this.maxDecayRate = 1.5;       // Maximum (fastest) decay
+                // Level-based progression system
+                // Designed so a good player can reach ~10 levels
+                this.answersPerLevel = 5;      // 5 correct answers = 1 level up
+                this.baseDecayRate = 0.25;     // Starting decay rate (slow)
+                this.currentDecayRate = 0.25;  // Current decay rate
+                this.minDecayRate = 0.15;      // Minimum (slowest) decay for struggling players
+                this.maxDecayRate = 2.0;       // Maximum (fastest) decay at high levels
+
+                // Level difficulty curve: decay rate increases per level
+                // Level 1: 0.25, Level 5: ~0.55, Level 10: ~1.0
+                this.decayIncreasePerLevel = 0.08;
 
                 // Response time tracking for adaptive difficulty
                 this.questionStartTime = 0;
@@ -1209,7 +1220,7 @@
                 this.level = 1;
                 this.timeLeft = this.maxTime;
 
-                // Reset adaptive systems
+                // Reset level-based progression system
                 this.currentDecayRate = this.baseDecayRate;
                 this.recentResponseTimes = [];
                 this.avgResponseTime = 3000;
@@ -1263,24 +1274,74 @@
                 document.getElementById('timer-bar').style.width = `${Math.max(0, percentage)}%`;
             }
 
-            // Calculate mastery score (0-1) based on recent performance
-            calculateMasteryScore() {
-                if (this.correctAnswers + this.wrongAnswers === 0) return 0.5;
-
-                const totalAnswers = this.correctAnswers + this.wrongAnswers;
-                const accuracy = this.correctAnswers / totalAnswers;
-
-                // Factor in streak (consecutive correct answers show mastery)
-                const streakBonus = Math.min(this.streak / 10, 0.3);
-
-                // Factor in speed (faster responses show mastery)
-                const speedFactor = this.avgResponseTime < 2000 ? 0.2 :
-                                   this.avgResponseTime < 3000 ? 0.1 : 0;
-
-                return Math.min(1, accuracy + streakBonus + speedFactor);
+            // Calculate the target decay rate for the current level
+            // This creates a smooth difficulty curve
+            getLevelDecayRate() {
+                // Base rate + increase per level (capped at max)
+                // Level 1: 0.25
+                // Level 5: 0.25 + (4 * 0.08) = 0.57
+                // Level 10: 0.25 + (9 * 0.08) = 0.97
+                // Level 15: capped at maxDecayRate (2.0)
+                return Math.min(
+                    this.maxDecayRate,
+                    this.baseDecayRate + (this.level - 1) * this.decayIncreasePerLevel
+                );
             }
 
-            // Adjust game speed based on player performance
+            // Check if player should level up
+            checkLevelUp() {
+                const newLevel = Math.floor(this.correctAnswers / this.answersPerLevel) + 1;
+                if (newLevel > this.level) {
+                    this.level = newLevel;
+                    // Update decay rate to match new level
+                    this.currentDecayRate = this.getLevelDecayRate();
+                    this.showLevelUp();
+                    return true;
+                }
+                return false;
+            }
+
+            // Show level up celebration
+            showLevelUp() {
+                const levelDisplay = document.getElementById('speed-level');
+                levelDisplay.textContent = this.level;
+
+                // Flash animation for level up
+                levelDisplay.style.transform = 'scale(1.5)';
+                levelDisplay.style.color = '#FFD700';
+                levelDisplay.style.textShadow = '0 0 10px #FFD700';
+
+                // Create level up popup
+                const popup = document.createElement('div');
+                popup.className = 'fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50';
+                popup.innerHTML = `
+                    <div class="bg-gradient-to-r from-yellow-400 to-orange-500 text-white px-6 py-4 rounded-2xl shadow-2xl text-center" style="animation: bounce-in 0.5s ease forwards;">
+                        <div class="text-3xl mb-1">🚀</div>
+                        <div class="text-xl font-bold">Nivell ${this.level}!</div>
+                        <div class="text-sm opacity-90">Més velocitat!</div>
+                    </div>
+                `;
+                document.body.appendChild(popup);
+
+                // Remove popup after animation
+                setTimeout(() => {
+                    popup.style.opacity = '0';
+                    popup.style.transition = 'opacity 0.3s ease';
+                    setTimeout(() => popup.remove(), 300);
+                }, 1200);
+
+                // Reset level display style
+                setTimeout(() => {
+                    levelDisplay.style.transform = 'scale(1)';
+                    levelDisplay.style.color = '';
+                    levelDisplay.style.textShadow = '';
+                }, 500);
+
+                // Play celebration sound
+                playSound('correct');
+            }
+
+            // Adjust game speed based on player performance (micro-adjustments within level)
             adjustDifficulty(wasCorrect, responseTime) {
                 // Track response time
                 this.recentResponseTimes.push(responseTime);
@@ -1289,26 +1350,28 @@
                 }
                 this.avgResponseTime = this.recentResponseTimes.reduce((a, b) => a + b, 0) / this.recentResponseTimes.length;
 
-                const mastery = this.calculateMasteryScore();
+                const targetDecay = this.getLevelDecayRate();
 
                 if (wasCorrect) {
-                    // Player is doing well - gradually increase speed
-                    if (mastery > 0.8 && responseTime < 2000) {
-                        // High mastery + fast response = increase speed more
-                        this.currentDecayRate = Math.min(this.maxDecayRate, this.currentDecayRate + 0.08);
-                    } else if (mastery > 0.6) {
-                        // Good mastery = slight speed increase
-                        this.currentDecayRate = Math.min(this.maxDecayRate, this.currentDecayRate + 0.03);
+                    // For correct answers, ensure decay rate matches level target
+                    // Small micro-adjustments for very fast responses
+                    if (responseTime < 1500) {
+                        this.currentDecayRate = Math.min(targetDecay + 0.05, this.maxDecayRate);
+                    } else {
+                        this.currentDecayRate = targetDecay;
                     }
-                    // If mastery is low, keep speed the same for correct answers
                 } else {
-                    // Player got it wrong - slow down to help them learn
-                    this.currentDecayRate = Math.max(this.minDecayRate, this.currentDecayRate - 0.15);
+                    // Player got it wrong - slight temporary slowdown (mercy mechanic)
+                    // But don't go below minimum or too far below level target
+                    this.currentDecayRate = Math.max(
+                        this.minDecayRate,
+                        Math.min(targetDecay - 0.1, this.currentDecayRate - 0.05)
+                    );
                 }
 
-                // If player is taking long to respond (hesitating), slow down
-                if (responseTime > 5000) {
-                    this.currentDecayRate = Math.max(this.minDecayRate, this.currentDecayRate - 0.1);
+                // If player is taking very long (hesitating), slight mercy slowdown
+                if (responseTime > 6000) {
+                    this.currentDecayRate = Math.max(this.minDecayRate, this.currentDecayRate - 0.05);
                 }
             }
 
@@ -1392,19 +1455,19 @@
                     const points = 10 + streakBonus + levelBonus + speedBonus;
                     this.score += points;
 
-                    // More generous time reward based on speed and streak
-                    let timeReward = 20; // Base reward (was 15)
-                    if (responseTime < 2000) timeReward += 10;  // Fast answer bonus
-                    if (this.streak >= 3) timeReward += 5;       // Streak bonus
-                    if (this.streak >= 5) timeReward += 5;       // Higher streak bonus
+                    // Time reward scales with level (harder levels need more generous rewards)
+                    // Base reward decreases slightly at higher levels but fast answers still help
+                    let baseReward = Math.max(12, 22 - this.level);  // 22 at level 1, down to 12 at level 10+
+                    let timeReward = baseReward;
+                    if (responseTime < 2000) timeReward += 8;   // Fast answer bonus
+                    if (this.streak >= 3) timeReward += 4;      // Streak bonus
+                    if (this.streak >= 5) timeReward += 4;      // Higher streak bonus
 
                     this.timeLeft = Math.min(this.timeLeft + timeReward, this.maxTime);
                     document.getElementById('timer-bar').classList.remove('warning');
 
-                    // Level up every 10 correct answers
-                    if (this.correctAnswers % 10 === 0) {
-                        this.level++;
-                    }
+                    // Check for level up (every 5 correct answers)
+                    this.checkLevelUp();
 
                     buttons.forEach(btn => {
                         if (parseInt(btn.textContent) === this.correctAnswer) {
@@ -1528,8 +1591,7 @@
                 this.correctAnswers = 0;
                 this.wrongAnswers = 0;
                 this.level = 1;
-                this.timeLeft = 100;
-                this.maxTime = 100;
+                this.timeLeft = this.maxTime;
                 this.currentDecayRate = this.baseDecayRate;
                 this.recentResponseTimes = [];
                 this.avgResponseTime = 3000;
